# SMT-IPC

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  NOTES.md  README.md  example.profile  pp_core.hpp  sibling_analyze.cpp  sibling_marks.hpp  sibling_noise.cpp  smt_pingpong.cpp  spsc_pipeline.cpp
.claude/: settings.json
docs/: crossover_data.csv  crossover_data_overlap.csv  crossover_jitter.csv  crossover_model.csv  crossover_model_overlap.csv
examples/: f1_residual_latency_bound.mca  f1_residual_latency_bound.profile  spsc_marked.cpp
scripts/: check_emit_model_overlap_cli.sh  check_f1_residual.sh  gen_crossover_svg.py  plot_crossover.py  run_crossover_check.sh
